<resources>
    <string name="app_name">BTG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_boxes">Boxes</string>
    <string name="menu_deliveries">Deliveries</string>
    <string name="menu_customers">Customers</string>
    <string name="l">L</string>
    <string name="w">W</string>
    <string name="h">H</string>
    <string name="strict">Strict</string>
    <string name="reset">Reset</string>
    <string name="x">x</string>
    <string name="left_chevrons"><![CDATA[<<<]]></string>
    <string name="right_chevrons"><![CDATA[>>>]]></string>
</resources>