<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_boxes">

    <fragment
        android:id="@+id/nav_boxes"
        android:name="com.jk.btg.ui.boxes.BoxesFragment"
        android:label="@string/menu_boxes"
        tools:layout="@layout/fragment_deliveries" />

    <fragment
        android:id="@+id/nav_deliveries"
        android:name="com.jk.btg.ui.deliveries.DeliveriesFragment"
        android:label="@string/menu_deliveries"
        tools:layout="@layout/fragment_boxes" />

    <fragment
        android:id="@+id/nav_customers"
        android:name="com.jk.btg.ui.customers.CustomersFragment"
        android:label="@string/menu_customers"
        tools:layout="@layout/fragment_customers" />
</navigation>